# stackebrandtcurves

./: .gitignore  README.md  setup.cfg  species_ani_thresholds.csv  species_stackebrandt_curves.Rmd  stackebrandtcurves_env.yml
.github/workflows/: codecov.yml  linter.yml  python-publish.yml  tests.yml
src/stackebrandtcurves/: ani.py  application.py  assembly.py  command.py  download.py  global.py  parse.py  refseq.py  search.py  ssu.py
test/: test_ani.py  test_application.py  test_assembly.py  test_command.py  test_refseq.py  test_search.py
test/data/: GCF_001688845.2_ASM168884v2_rna_from_genomic.fna  assembly_summary.txt  muribaculum.fasta  muribaculum_output.txt  (+2 more)
typestrain_refseq_data/: assembly_GCF_000012825.1_pctid_ani.txt  assembly_GCF_000144405.1_pctid_ani.txt  assembly_GCF_000148585.2_pctid_ani.txt  assembly_GCF_000156055.1_pctid_ani.txt  assembly_GCF_000157935.1_pctid_ani.txt  assembly_GCF_000164675.2_pctid_ani.txt  assembly_GCF_000175615.1_pctid_ani.txt  assembly_GCF_000191405.1_pctid_ani.txt  assembly_GCF_001688845.2_pctid_ani.txt  assembly_GCF_002865995.1_pctid_ani.txt  assembly_GCF_003324185.1_pctid_ani.txt  assembly_GCF_004295125.1_pctid_ani.txt  assembly_GCF_005706655.1_pctid_ani.txt  assembly_GCF_006364675.1_pctid_ani.txt  assembly_GCF_006742205.1_pctid_ani.txt  assembly_GCF_008000975.1_pctid_ani.txt  assembly_GCF_008281175.1_pctid_ani.txt  assembly_GCF_008728435.1_pctid_ani.txt  assembly_GCF_009831375.1_pctid_ani.txt  assembly_GCF_014131755.1_pctid_ani.txt  assembly_GCF_900186885.1_pctid_ani.txt  assembly_GCF_900537995.1_pctid_ani.txt
