[metadata]
name = stackebrandtcurves
version = 0.0.1
author = Kyle Bittinger
author_email = kylebittinger@gmail.com
description = Compare 16S rRNA gene similarity vs. full genome similarity
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kylebittinger/stackebrandtcurves
project_urls =
    Bug Tracker = https://github.com/kylebittinger/stackebrandtcurves/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    stackebrandtcurve = stackebrandtcurves.command:main
